# Trusty-Hotels

./: README.md  db.sqlite3  docker-compose.yml  heroku.yml  manage.py  pyproject.toml  requirements.txt  requirements.txtcd
hotels_api/: admin.py  models.py  permissions.py  serializer.py  urls.py  views.py
hotels_api/migrations/: 0001_initial.py  0002_auto_20201017_0555.py  0002_auto_20201021_1224.py  0002_fav.py  0003_auto_20201017_0805.py
trusty_hotels/: asgi.py  sample.env  settings.py  urls.py  wsgi.py
