[tool.poetry]
name = "trusty-hotels"
version = "0.1.0"
description = ""
authors = ["ahmad-swedani <swedani390@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.1.2"
djangorestframework = "^3.12.1"
psycopg2-binary = "^2.8.6"
pillow = "^7.2.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
